<resources>
    <string name="app_name">Movie Guide</string>
    <string name="txtPopular">Popular Movies</string>
    <string name="txtTrending">Trending Now</string>
    <string name="txtNowPlaying">Now Playing</string>
    <string name="txtTopRated">Top Rated</string>
    <string name="txtUpcoming">Upcoming Movies</string>
    <string name="txtAwardWinning">Award Winning Movies</string>
    <string name="interstellar">Interstellar</string>
    <string name="release_date_interstellar">October 26, 2014 (USA)</string>
    <string name="ratings_interstellar">8.6 IMDb</string>
    <string name="movie_detail_interstellar">In Earth\'s future, a global crop blight and second Dust Bowl are slowly rendering the planet uninhabitable. Professor Brand (Michael Caine), a brilliant NASA physicist, is working on plans to save mankind by transporting Earth\'s population to a new home via a wormhole. But first, Brand must send former NASA pilot Cooper (Matthew McConaughey) and a team of researchers through the wormhole and across the galaxy to find out which of three planets could be mankind\'s new home.</string>
    <string name="movie_detail_avengers_endgame">Adrift in space with no food or water, Tony Stark sends a message to Pepper Potts as his oxygen supply starts to dwindle. Meanwhile, the remaining Avengers — Thor, Black Widow, Captain America and Bruce Banner — must figure out a way to bring back their vanquished allies for an epic showdown with Thanos — the evil demigod who decimated the planet and the universe.</string>
    <string name="movie_detail_dark_knight">With the help of allies Lt. Jim Gordon (Gary Oldman) and DA Harvey Dent (Aaron Eckhart), Batman (Christian Bale) has been able to keep a tight lid on crime in Gotham City. But when a vile young criminal calling himself the Joker (Heath Ledger) suddenly throws the town into chaos, the caped Crusader begins to tread a fine line between heroism and vigilantism.</string>
    <string name="movie_detail_inception">Dom Cobb (Leonardo DiCaprio) is a thief with the rare ability to enter people\'s dreams and steal their secrets from their subconscious. His skill has made him a hot commodity in the world of corporate espionage but has also cost him everything he loves. Cobb gets a chance at redemption when he is offered a seemingly impossible task: Plant an idea in someone\'s mind. If he succeeds, it will be the perfect crime, but a dangerous enemy anticipates Cobb\'s every move.</string>
    <string name="movie_detail_zodiac">In the late 1960s and 1970s, fear grips the city of San Francisco as a serial killer called Zodiac stalks its residents. Investigators (Mark Ruffalo, Anthony Edwards) and reporters (Jake Gyllenhaal, Robert Downey Jr.) become obsessed with learning the killer\'s identity and bringing him to justice. Meanwhile, Zodiac claims victim after victim and taunts the authorities with cryptic messages, cyphers and menacing phone calls.</string>
    <string name="movie_detail_irishman">In the 1950s, truck driver Frank Sheeran gets involved with Russell Bufalino and his Pennsylvania crime family. As Sheeran climbs the ranks to become a top hit man, he also goes to work for Jimmy Hoffa — a powerful Teamster tied to organized crime.</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="comedies">Comedies</string>
    <string name="crime">Crime</string>
    <string name="dramas">Dramas</string>
    <string name="horror">Horror</string>
    <string name="sci_fi_fantasy"><![CDATA[Sci-Fi & Fantasy]]></string>
    <string name="thriller">Thriller</string>
    <string name="documentaries">Documentaries</string>
    <string name="classics">Classics</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="search">Search</string>
    <string name="cast_desc">Cast</string>
    <string name="movie">Movie</string>
    <string name="movie_title">Movie Title</string>
    <string name="where_to_watch_title">Where to Watch</string>
    <string name="where_to_watch_desc">Where to Watch</string>
    <string name="movie_title_slide">Movie Title Slide</string>
    <string name="gradient">Gradient</string>
    <string name="slide_image">Slide Image</string>
    <string name="year_genre_and_time">Year, Genre and Time</string>
    <string name="ratings">Ratings</string>
    <string name="search_bar">Search</string>
    <string name="title_more">More</string>
    <string name="movie_cover">Movie Cover</string>
    <string name="trailers">Trailers</string>
    <string name="search_movie">Search for a movie, genre etc.</string>
    <string name="logo">Logo</string>
    <string name="search_settings">Search settings</string>
    <string name="search_for_movie">Search for movie</string>
    <string name="app_settings">App Settings</string>
    <string name="push_notification">Push Notification</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="dark_mode">Light Mode</string>
    <string name="update_password">Change Password</string>
    <string name="cancel_account">Deactivate Account</string>
    <string name="feedback">Feedback</string>
    <string name="search_for_a_movie">Search for a movie</string>
    <string name="genre">Genre</string>
    <string name="history">History</string>
    <string name="romance">Romance</string>
    <string name="add_to_list">Add to List</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_image">Login Image</string>
    <string name="login">Login</string>
    <string name="not_registered_sign_up_here">Not registered? Sign up here</string>
    <string name="log_in_here">Already have an account? Log in here</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="email_image">Email Image</string>
    <string name="password_image">Password Image</string>
    <string name="name">Name</string>
    <string name="name_image">Name Image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="change_password">Change Password</string>
    <string name="where_to_watch_1">WhereToWatch</string>
    <string name="view_details">View Details</string>
    <string name="movie_trailer_icon">Movie Trailer Icon</string>
    <string name="trailer">Trailer</string>
    <string name="movies_search">Movies Search</string>
    <string name="crew">Crew</string>
    <string name="job">Job</string>
    <string name="character">Character</string>
    <string name="as">AS</string>
</resources>
