<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTheme"
    android:orientation="vertical"
    tools:context=".ui.SearchCategoryActivity"
    tools:menu="@menu/toolbar_search_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_action"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/colorPurple"
            android:layout_height="75dp"
            android:text="@string/action"
            android:background="@color/colorSubTheme"/>

        <Button
            android:id="@+id/btn_adventure"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/colorPurple"
            android:layout_height="75dp"
            android:layout_marginTop="2dp"
            android:text="@string/adventure"
            android:background="@color/colorSubTheme"/>

        <Button
            android:id="@+id/btn_classics"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/colorPurple"
            android:layout_height="75dp"
            android:layout_marginTop="2dp"
            android:text="@string/classics"
            android:background="@color/colorSubTheme"/>

        <Button
            android:id="@+id/btn_comedies"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/colorPurple"
            android:layout_height="75dp"
            android:layout_marginTop="2dp"
            android:text="@string/comedies"
            android:background="@color/colorSubTheme"/>

        <Button
            android:id="@+id/btn_crime"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/colorPurple"
            android:layout_height="75dp"
            android:layout_marginTop="2dp"
            android:text="@string/crime"
            android:background="@color/colorSubTheme"/>

        <Button
            android:id="@+id/btn_documentaries"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/colorPurple"
            android:layout_height="75dp"
            android:layout_marginTop="2dp"
            android:text="@string/documentaries"
            android:background="@color/colorSubTheme"/>

        <Button
            android:id="@+id/btn_dramas"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/colorPurple"
            android:layout_height="75dp"
            android:layout_marginTop="2dp"
            android:text="@string/dramas"
            android:background="@color/colorSubTheme"/>

        <Button
            android:id="@+id/btn_horror"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/colorPurple"
            android:layout_height="75dp"
            android:layout_marginTop="2dp"
            android:text="@string/horror"
            android:background="@color/colorSubTheme"/>

        <Button
            android:id="@+id/btn_sci_fi_fantasy"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/colorPurple"
            android:layout_height="75dp"
            android:layout_marginTop="2dp"
            android:text="@string/sci_fi_fantasy"
            android:background="@color/colorSubTheme"/>

        <Button
            android:id="@+id/btn_thriller"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/colorPurple"
            android:layout_height="75dp"
            android:layout_marginTop="2dp"
            android:text="@string/thriller"
            android:background="@color/colorSubTheme"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>