<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.arb.movieguideapp.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.arb.movieguideapp.fragments.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search_category" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.arb.movieguideapp.fragments.FavoriteFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.arb.movieguideapp.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
